# api/openapi.yaml
@@ -1881,6 +1881,10 @@ components:
           items:
             type: string
             format: uuid
+        roles:
+          type: array
+          items:
+            type: string
         permissions:
           type: array
           items:
